--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "andreafuturi.com",
-  "homepage": "http://lordanubi.github.io/andreafuturi.com",
+  "homepage": "http://lordanubi.github.io/andreafuturi",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
