--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "andreafuturi.com",
-  "homepage": "https://andreafuturi.com",
+  "name": "andreafuturi",
+  "homepage": "https://andreafuturi.com/",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
