--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
-    "framer-motion": "^3.7.0",
+    "jsxstyle": "^2.4.0",
+    "mini-svg-data-uri": "^1.2.3",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^4.0.3"
