--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "react-error-overlay": "6.0.9"
   }
 }
