--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "mini-svg-data-uri": "^1.2.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "svg-path-commander": "^0.1.25"
   },
   "scripts": {
     "start": "react-scripts start",
