--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
-    "hoist-non-react-statics": "^3.3.2",
+    "@babel/register": "^7.17.7",
+    "func-loc": "^0.1.16",
+    "jsdom-quokka-plugin": "^1.0.16",
     "mini-svg-data-uri": "^1.2.3",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-scripts": "^4.0.3",
     "svg-path-commander": "^0.1.25"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -32,7 +34,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "react-error-overlay": "6.0.9"
+    "gh-pages": "^3.1.0"
   }
 }
